去蕪存菁，帶擴充內容。

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     <li>
                         <a class="page-scroll" href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#team">Team</a>
                     </li>
-                    <li>
+<!--                     <li>
                         <a class="page-scroll" href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#contact">Contact</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -93,16 +93,16 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Make the World a Better Place.</h3>
                 </div>
             </div>
-            <div class="row text-center">
-                <div class="col-md-4">
+<!--             <div class="row text-center">
+                <div class="col-md-4 col-md-offset-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
+                    <h4 class="service-heading"></h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-md-4">
@@ -121,7 +121,7 @@
                     <h4 class="service-heading">Web Security</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -131,25 +131,25 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+<!--                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-xs-offset-4 col-md-4 col-sm-6">
                     <a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="./index_files/roundicons.png" class="img-responsive" alt="">
+                        <img src="./index_files/pttchromeplugin.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>PTT</h4>
                         <p class="text-muted">Chrome plugin for PTT</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+<!--                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -162,7 +162,7 @@
                         <h4>Startup Framework</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -173,7 +173,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+<!--                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
             <div class="row">
@@ -192,34 +192,6 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">古代的人類，利用魔法創造高度的文明，但在三千年前的魔法大戰，摧毀了世界。如今站在魔法頂端的六位英雄，將帶領倖存的人類....</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="./index_files/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="./index_files/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                 </div>
                             </div>
                         </li>
@@ -258,7 +230,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+<!--                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
             <div class="row">
@@ -267,14 +239,14 @@
                         <img src="./index_files/miya.png" class="img-responsive img-circle" alt="">
                         <h4>Miya</h4>
                         <p class="text-muted">Team Leader&amp;Full Developer</p>
-                        <ul class="list-inline social-buttons">
+<!--                         <ul class="list-inline social-buttons">
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -282,14 +254,14 @@
                         <img src="./index_files/dream.png" class="img-responsive img-circle" alt="">
                         <h4>Dream Chang</h4>
                         <p class="text-muted">Backend Developer</p>
-                        <ul class="list-inline social-buttons">
+<!--                         <ul class="list-inline social-buttons">
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -297,14 +269,14 @@
                         <img src="./index_files/jas.png" class="img-responsive img-circle" alt="">
                         <h4>Jas</h4>
                         <p class="text-muted">Frondend Developer</p>
-                        <ul class="list-inline social-buttons">
+<!--                         <ul class="list-inline social-buttons">
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -312,14 +284,14 @@
                         <img src="./index_files/bango.png" class="img-responsive img-circle" alt="">
                         <h4>Bango</h4>
                         <p class="text-muted">IOS Developer</p>
-                        <ul class="list-inline social-buttons">
+<!--                         <ul class="list-inline social-buttons">
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -327,14 +299,14 @@
                         <img src="./index_files/dad.png" class="img-responsive img-circle" alt="">
                         <h4>Dad</h4>
                         <p class="text-muted">Hardware Developer</p>
-                        <ul class="list-inline social-buttons">
+<!--                         <ul class="list-inline social-buttons">
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -342,27 +314,27 @@
                         <img src="./index_files/hgw.png" class="img-responsive img-circle" alt="">
                         <h4>HGW</h4>
                         <p class="text-muted">Frondend Developer</p>
-                        <ul class="list-inline social-buttons">
+<!--                         <ul class="list-inline social-buttons">
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
-            <div class="row">
+<!--             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
     <!-- Clients Aside -->
-    <aside class="clients">
+<!--     <aside class="clients">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -387,10 +359,10 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </aside> -->
     
     <!-- Contact Section -->
-    <section id="contact">
+<!--     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -432,7 +404,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer>
         <div class="container">
@@ -441,23 +413,23 @@
                     <span class="copyright">Copyright © Your Website 2014</span>
                 </div>
                 <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
+<!--                     <ul class="list-inline social-buttons">
                         <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
-                <div class="col-md-4">
+<!--                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
                         <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#">Privacy Policy</a>
                         </li>
                         <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#">Terms of Use</a>
                         </li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
     </footer>
@@ -479,16 +451,16 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="./index_files/roundicons-free.png" alt="">
-                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                            <p>
-                                <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
+                            <h2>鄉民福爾摩斯</h2>
+                            <p class="item-intro text-muted">黨工最恐怖的噩夢</p>
+                            <img class="img-responsive img-centered" src="./index_files/pttchromeplugin-preview.jpg" alt="">
+                            <p>在PTT上潛伏著一種高貴、純粹的風之妖精，俗稱黨工。性情害羞、行蹤隱密，見到他們一面一直是鄉民的夢想。</p>
+                            <p>今天只要裝上Magic6的工具在ptt web版上滑鼠輕輕的移到使用者的ID上就能顯示此ID過去的使用紀錄，使使用者更容易發現這種美麗的生物。</p>
+                            <p><strong>此工具不預設任何立場，純粹的提供資料。</strong></p>
                             <ul class="list-inline">
-                                <li>Date: July 2014</li>
-                                <li>Client: Round Icons</li>
-                                <li>Category: Graphic Design</li>
+                                <li>Date: August 2014</li>
+                                <li>Client: Netizen</li>
+                                <li>Category: Open Data </li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
@@ -497,7 +469,7 @@
             </div>
         </div>
     </div>
-
+<!-- 
     <!-- Portfolio Modal 2 -->
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
@@ -631,7 +603,7 @@
             </div>
         </div>
     </div>
-
+ -->
     <!-- jQuery -->
     <script src="./index_files/jquery.js"></script>
 
