--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>Magic6</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/css/agency.css" rel="stylesheet">
+    <link href="./css/agency.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="./index_files/font-awesome.min.css" rel="stylesheet" type="text/css">
