--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0070)file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html -->
+<!-- saved from url=(0070) -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta charset="utf-8">
@@ -45,29 +45,29 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#page-top">Magic6</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Magic6</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#page-top"></a>
+                        <a href="#page-top"></a>
                     </li>
                     <li class="">
-                        <a class="page-scroll" href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#services">Services</a>
+                        <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li class="">
-                        <a class="page-scroll" href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="active">
-                        <a class="page-scroll" href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#about">About</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#team">Team</a>
+                        <a class="page-scroll" href="#team">Team</a>
                     </li>
 <!--                     <li>
-                        <a class="page-scroll" href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Contact</a>
                     </li> -->
                 </ul>
             </div>
@@ -82,7 +82,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Our Studio!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
@@ -136,7 +136,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-offset-4 col-md-4 col-sm-6">
-                    <a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -150,7 +150,7 @@
                     </div>
                 </div>
 <!--                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -240,11 +240,11 @@
                         <h4>Miya</h4>
                         <p class="text-muted">Team Leader&amp;Full Developer</p>
 <!--                         <ul class="list-inline social-buttons">
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul> -->
                     </div>
@@ -255,11 +255,11 @@
                         <h4>Dream Chang</h4>
                         <p class="text-muted">Backend Developer</p>
 <!--                         <ul class="list-inline social-buttons">
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul> -->
                     </div>
@@ -270,11 +270,11 @@
                         <h4>Jas</h4>
                         <p class="text-muted">Frondend Developer</p>
 <!--                         <ul class="list-inline social-buttons">
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul> -->
                     </div>
@@ -285,11 +285,11 @@
                         <h4>Bango</h4>
                         <p class="text-muted">IOS Developer</p>
 <!--                         <ul class="list-inline social-buttons">
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul> -->
                     </div>
@@ -300,11 +300,11 @@
                         <h4>Dad</h4>
                         <p class="text-muted">Hardware Developer</p>
 <!--                         <ul class="list-inline social-buttons">
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul> -->
                     </div>
@@ -315,11 +315,11 @@
                         <h4>HGW</h4>
                         <p class="text-muted">Frondend Developer</p>
 <!--                         <ul class="list-inline social-buttons">
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul> -->
                     </div>
@@ -338,22 +338,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#">
+                    <a href="#">
                         <img src="./index_files/envato.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#">
+                    <a href="#">
                         <img src="./index_files/designmodo.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#">
+                    <a href="#">
                         <img src="./index_files/themeforest.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#">
+                    <a href="#">
                         <img src="./index_files/creative-market.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
@@ -414,19 +414,19 @@
                 </div>
                 <div class="col-md-4">
 <!--                     <ul class="list-inline social-buttons">
-                        <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-facebook"></i></a>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul> -->
                 </div>
 <!--                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#">Privacy Policy</a>
+                        <li><a href="#">Privacy Policy</a>
                         </li>
-                        <li><a href="file:///C:/Users/sony/Downloads/startbootstrap-agency-1.0.4/index.html#">Terms of Use</a>
+                        <li><a href="#">Terms of Use</a>
                         </li>
                     </ul>
                 </div> -->
