--- a/index.html
+++ b/index.html
@@ -137,11 +137,6 @@
             <div class="row">
                 <div class="col-xs-offset-4 col-md-4 col-sm-6">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
                         <img src="./index_files/pttchromeplugin.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
@@ -410,7 +405,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright © Your Website 2014</span>
+                    <span class="copyright">Copyright © Magic6 2015</span>
                 </div>
                 <div class="col-md-4">
 <!--                     <ul class="list-inline social-buttons">
@@ -603,7 +598,7 @@
             </div>
         </div>
     </div>
- -->
+	
     <!-- jQuery -->
     <script src="./index_files/jquery.js"></script>
 
