--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                     <h4 class="subheading">Hackathon</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">We do done for PTT prototype.!</p>
+                                    <p class="text-muted">參加黑客松活動在兩天一夜之中，完成一個產品(PTT plugin)的雛形.!</p>
                                 </div>
                             </div>
                         </li>
@@ -247,7 +247,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="./index_files/dream.png" class="img-responsive img-circle" alt="">
-                        <h4>Dream Chang</h4>
+                        <h4>Dream</h4>
                         <p class="text-muted">Backend Developer</p>
 <!--                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
@@ -263,7 +263,7 @@
                     <div class="team-member">
                         <img src="./index_files/jas.png" class="img-responsive img-circle" alt="">
                         <h4>Jas</h4>
-                        <p class="text-muted">Frondend Developer</p>
+                        <p class="text-muted">Frontend Developer</p>
 <!--                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -292,7 +292,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="./index_files/dad.png" class="img-responsive img-circle" alt="">
-                        <h4>Dad</h4>
+                        <h4>Sprout</h4>
                         <p class="text-muted">Hardware Developer</p>
 <!--                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
@@ -308,7 +308,7 @@
                     <div class="team-member">
                         <img src="./index_files/hgw.png" class="img-responsive img-circle" alt="">
                         <h4>HGW</h4>
-                        <p class="text-muted">Frondend Developer</p>
+                        <p class="text-muted">Frontend Developer</p>
 <!--                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
