--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="team-member">
                         <img src="./index_files/miya.png" class="img-responsive img-circle" alt="">
                         <h4>Miya</h4>
-                        <p class="text-muted">Team Leader&amp;Full Developer</p>
+                        <p class="text-muted">Frontend Developer</p>
 <!--                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
